<resources>
    <string name="app_name" translatable="false">SelMe</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="action_login">Login</string>
    <string name="action_create_account">No account yet? Create one</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="first_name_edit_text">First name</string>
    <string name="action_button_create_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="last_name_edit_text">Last name</string>
    <string name="about_me">About me</string>
    <string name="city_edit_text">City</string>
    <string name="dialog_authenticating">Authenticating…</string>
    <string name="email_input_error">Enter a valid email address</string>
    <string name="password_input_error">Your password  must be more then 6 letters.</string>
    <string name="toast_login_failed">Login is failed! Try again!</string>
    <string name="first_name_input_error">Enter your first name</string>
    <string name="last_name_input_error">Enter your last name</string>
    <string name="toast_sign_up_failed">Sing up is failed! Try again!</string>
    <string name="toast_sign_up_success">Sign up is success!</string>
    <string name="title_add_post">Add post</string>
    <string name="title_profile">Profile</string>
    <string name="sign_out">Sign out</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile_btn_text">Edit profile</string>
    <string name="profile_photo">Profile photo</string>
    <string name="picture_1">picture 1</string>
    <string name="picture_2">picture 2</string>
    <string name="this_one">This one</string>
    <string name="profile_image">Profile image</string>
    <string name="title_of_your_post">Title of your post</string>
    <string name="upload_the_first_picture">Upload the first picture</string>
    <string name="upload_the_second_picture">Upload the second picture</string>
    <string name="share_new_post">Share</string>
    <string name="description_of_your_post">Description of your post</string>
    <string name="title_new_post">New Post</string>
    <string name="error_input_title_post">Enter the title of your post.</string>
    <string name="error_input_desc_post">Enter the description of your post.</string>
    <string name="you_didn_t_choose_a_picture">You didn\'t choose a picture.</string>
    <string name="posting_progress_dialog">Posting...</string>
    <string name="error_create_post">Error! Post doesn\'t create</string>
    <string name="you_voted">You have already voted</string>
    <string name="repeat_your_password">Repeat your password</string>
    <string name="password_not_equals">Passwords doesn\'t equals!</string>
    <string name="upload_your_avatar">Upload your avatar</string>
    <string name="i_remember_my_password_login">I remember my password. Login</string>
    <string name="reset_password">Reset password</string>
    <string name="enter_your_email_which_you_entered_when_registering">Enter your email which you entered when registering. We will send you a password recovery email.</string>
    <string name="forgot_my_password_reset">Forgot my password. Reset</string>
    <string name="sending_email">Sending email...</string>
    <string name="comments">Comments</string>
    <string name="like">Like</string>
    <string name="add_comment">Add a comment</string>
    <string name="write_comment">Write your comment!</string>
    <string name="upload_picture_error">Upload your picture!</string>
    <string name="nothing_to_show">Nothing to show. Create post.</string>
</resources>
